--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Titre de ma page test !</title>
+    <h1>Youhou c'est trop cool</h1>
+    <h2>Ceci est un H2</h2>
   </head>
   <body>
   
